--- a/pepeizqs deals web/Pages/Componentes/Cuenta/NotificacionesPush.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/NotificacionesPush.razor
@@ -259,6 +259,11 @@
 			if (suscripcion2 != null)
 			{
 				userAgentRegistrado = suscripcion.UserAgent;
+
+				await InvokeAsync(() =>
+				{
+					StateHasChanged();
+				});
 			}
 		}
 	}
