--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -279,7 +279,7 @@
 
     <script src="~/superjs.js" defer></script>
 
-    <script src="_framework/blazor.web.js" autostart="false"></script>
+    <script src="_framework/blazor.server.js" autostart="false"></script>
 
     <script>
         function delay(milliseconds) {
